--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "rimraf ./dist"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "fbjs": "^0.8.16",
     "lodash.invert": "^4.3.0",
     "lodash.isempty": "^4.4.0",
